[utilmize-109712] Add ontimize-boot. Review warnings (#25)