@@ -5,7 +5,7 @@
 	<parent>
 	    <groupId>com.ontimize.labs</groupId>
 	    <artifactId>ontimize-bom</artifactId>
-	    <version>7.0.3-SNAPSHOT</version>
+	    <version>7.1.0-SNAPSHOT</version>
 		<relativePath>ontimize-bom</relativePath>
 	</parent>
 	<artifactId>ontimize-core-parent</artifactId>
@@ -33,8 +33,15 @@
 		<module>ontimize-jee-server-jdbc</module>
 		<module>ontimize-jee-webclient-addons</module>
 		<module>ontimize-jee-jacoco</module>
+		<module>ontimize-jee-server-keycloak</module>
 		<module>ontimize-starter-log4j</module>
 		<module>ontimize-starter-logback</module>
+        <module>ontimize-boot-autoconfigure</module>
+        <module>ontimize-boot-core</module>
+        <module>ontimize-boot-keycloak</module>
+        <module>ontimize-boot-starters</module>
+        <module>ontimize-boot-webaddons</module>
+        <module>ontimize-boot-report</module>
 	</modules>
 
 	<organization>
@@ -65,8 +72,7 @@
 	</repositories>
 
 	<properties>
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.release>11</maven.compiler.release>
 
 		<!-- =========================================================== -->
 		<!-- Encoding -->
@@ -91,6 +97,7 @@
 		<skip.integration.tests>false</skip.integration.tests>
 		<!-- SONARCloud configuration -->
 		<sonar.organization>ontimize</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<build>
@@ -139,8 +146,7 @@
 					<version>${maven-compiler-plugin.version}</version>
 					<configuration>
 						<verbose>false</verbose>
-						<source>${maven.compiler.source}</source>
-						<target>${maven.compiler.target}</target>
+						<release>${maven.compiler.release}</release>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
 				</plugin>
@@ -165,13 +171,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
+					<release>${maven.compiler.release}</release>
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<fork>true</fork>
-					<compilerArgs>
-						<arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
